src/np222kk/dv507/a2/test/cases/positive/test_assignment.ofp
void main() {
    int i;
    char c;
    i = 1;
    c = 'c';   
}