src/np222kk/dv507/a2/test/cases/negative/test_unary_01.ofp
void main() {
    int b = -("c");
}